--- a/4thSemester/www/lab1/styles.css
+++ b/4thSemester/www/lab1/styles.css
@@ -124,7 +124,6 @@ code {
 .projectdetails {
     display: flex;
     flex-direction: column; 
-    align-items: center;
     padding: 0em 1em 1em;
 }
 
@@ -139,13 +138,17 @@ code {
 
 .imgdesc {
     font-style: italic;
+    align-self: center;
 }
 
 #aboutdiv {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 0em 1em;
+}
+
+#aboutdiv>img {
+    align-self: center;
 }
 
 #mephoto {
@@ -182,6 +185,10 @@ code {
 }
 
 @media only screen and (min-width: 1200px) {
+    main {
+        padding-top: 70px;
+    }
+
     nav {
         height: 40px;
         display: flex;
@@ -213,8 +220,13 @@ code {
         padding: 0 2em;
     }
 
-    .projectimg {
+    .projectdiv>.projectimg {
         width: 70%;
+    }
+
+    .projectdetails>.projectimg {
+        align-self: center;
+        width: 50%;
     }
 
     #projects {
