--- a/4thSemester/www/lab3/styles.css
+++ b/4thSemester/www/lab3/styles.css
@@ -68,8 +68,6 @@ h1 {
     width: 80%;
     display: flex;
     flex-direction: column;
-    font-family: monospace;
-
 }
 
 .keyboard-row {
@@ -79,6 +77,7 @@ h1 {
 }
 
 .key {
+    font-family: "Shadows Into Light Two", cursive;
     font-size: 5vmax;
     text-align: center;
     display: flex;
