--- a/4thSemester/www/lab3/styles.css
+++ b/4thSemester/www/lab3/styles.css
@@ -161,6 +161,12 @@ h1 {
     background-color: rgb(232, 232, 232);
 }
 
+@media only screen and (max-height: 700px) {
+    #giveup {
+        bottom: -70px;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     #gallows {
         height: 70vmin;
