--- a/4thSemester/www/lab4/frontend/src/Products.css
+++ b/4thSemester/www/lab4/frontend/src/Products.css
@@ -54,7 +54,6 @@
 }
 
 .product-item button {
-    background: #1976d2;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -163,6 +162,9 @@
 }
 
 .edit-product-btn {
+    position: absolute;
+    top: 35px;
+    right: -2px;
     background: #1976d2;
     color: #fff;
     border: none;
@@ -179,6 +181,9 @@
 }
 
 .delete-product-btn {
+    position: absolute;
+    top: 6px;
+    right: 2px;
     background: #d32f2f;
     color: #fff;
     border: none;
